syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.graphoenix.introspection.grpc";

package io.graphoenix.introspection.grpc;

import "io/graphoenix/introspection/enums.proto";
import "io/graphoenix/introspection/objects.proto";
import "io/graphoenix/introspection/interfaces.proto";
import "io/graphoenix/introspection/input_objects.proto";
import "io/graphoenix/core/enums.proto";
import "google/protobuf/timestamp.proto";

message MutationIntroSchemaRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    repeated IntroTypeInput types = 4;
    optional IntroTypeInput query_type = 5;
    optional IntroTypeInput mutation_type = 6;
    optional IntroTypeInput subscription_type = 7;
    repeated IntroDirectiveInput directives = 8;
    optional string intro_typename = 9;
    optional string query_type_name = 10;
    optional string mutation_type_name = 11;
    optional string subscription_type_name = 12;
    optional IntroSchemaExpression where = 13;
}
message MutationIntroSchemaListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    repeated IntroTypeInput types = 4;
    optional IntroTypeInput query_type = 5;
    optional IntroTypeInput mutation_type = 6;
    optional IntroTypeInput subscription_type = 7;
    repeated IntroDirectiveInput directives = 8;
    optional string intro_typename = 9;
    optional string query_type_name = 10;
    optional string mutation_type_name = 11;
    optional string subscription_type_name = 12;
    repeated IntroSchemaInput list = 13;
    optional IntroSchemaExpression where = 14;
}
message MutationIntroTypeRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string name = 3;
    optional IntroSchemaInput of_schema = 4;
    optional io.graphoenix.core.grpc.IntroTypeKind kind = 5;
    optional string description = 6;
    repeated IntroFieldInput fields = 7;
    repeated IntroTypeInput interfaces = 8;
    repeated IntroTypeInput possible_types = 9;
    repeated IntroEnumValueInput enum_values = 10;
    repeated IntroInputValueInput input_fields = 11;
    optional IntroTypeInput of_type = 12;
    optional string intro_typename = 13;
    optional int32 schema_id = 14;
    optional string of_type_name = 15;
    repeated IntroTypeInterfacesInput intro_type_interfaces = 16;
    repeated IntroTypePossibleTypesInput intro_type_possible_types = 17;
    optional IntroTypeExpression where = 18;
}
message MutationIntroTypeListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string name = 3;
    optional IntroSchemaInput of_schema = 4;
    optional io.graphoenix.core.grpc.IntroTypeKind kind = 5;
    optional string description = 6;
    repeated IntroFieldInput fields = 7;
    repeated IntroTypeInput interfaces = 8;
    repeated IntroTypeInput possible_types = 9;
    repeated IntroEnumValueInput enum_values = 10;
    repeated IntroInputValueInput input_fields = 11;
    optional IntroTypeInput of_type = 12;
    optional string intro_typename = 13;
    optional int32 schema_id = 14;
    optional string of_type_name = 15;
    repeated IntroTypeInterfacesInput intro_type_interfaces = 16;
    repeated IntroTypePossibleTypesInput intro_type_possible_types = 17;
    repeated IntroTypeInput list = 18;
    optional IntroTypeExpression where = 19;
}
message MutationIntroFieldRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string name = 4;
    optional IntroTypeInput of_type = 5;
    optional string description = 6;
    repeated IntroInputValueInput args = 7;
    optional IntroTypeInput type = 8;
    optional string deprecation_reason = 9;
    optional string intro_typename = 10;
    optional string of_type_name = 11;
    optional string type_name = 12;
    optional IntroFieldExpression where = 13;
}
message MutationIntroFieldListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string name = 4;
    optional IntroTypeInput of_type = 5;
    optional string description = 6;
    repeated IntroInputValueInput args = 7;
    optional IntroTypeInput type = 8;
    optional string deprecation_reason = 9;
    optional string intro_typename = 10;
    optional string of_type_name = 11;
    optional string type_name = 12;
    repeated IntroFieldInput list = 13;
    optional IntroFieldExpression where = 14;
}
message MutationIntroInputValueRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string name = 4;
    optional IntroTypeInput of_type = 5;
    optional int32 field_id = 6;
    optional string directive_name = 7;
    optional string description = 8;
    optional IntroTypeInput type = 9;
    optional string default_value = 10;
    optional string intro_typename = 11;
    optional string of_type_name = 12;
    optional string type_name = 13;
    optional IntroInputValueExpression where = 14;
}
message MutationIntroInputValueListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string name = 4;
    optional IntroTypeInput of_type = 5;
    optional int32 field_id = 6;
    optional string directive_name = 7;
    optional string description = 8;
    optional IntroTypeInput type = 9;
    optional string default_value = 10;
    optional string intro_typename = 11;
    optional string of_type_name = 12;
    optional string type_name = 13;
    repeated IntroInputValueInput list = 14;
    optional IntroInputValueExpression where = 15;
}
message MutationIntroEnumValueRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string name = 4;
    optional IntroTypeInput of_type = 5;
    optional string description = 6;
    optional string deprecation_reason = 7;
    optional string intro_typename = 8;
    optional string of_type_name = 9;
    optional IntroEnumValueExpression where = 10;
}
message MutationIntroEnumValueListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string name = 4;
    optional IntroTypeInput of_type = 5;
    optional string description = 6;
    optional string deprecation_reason = 7;
    optional string intro_typename = 8;
    optional string of_type_name = 9;
    repeated IntroEnumValueInput list = 10;
    optional IntroEnumValueExpression where = 11;
}
message MutationIntroDirectiveRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string name = 3;
    optional IntroSchemaInput of_schema = 4;
    optional string description = 5;
    repeated io.graphoenix.core.grpc.IntroDirectiveLocation locations = 6;
    repeated IntroInputValueInput args = 7;
    optional bool is_repeatable = 8;
    optional string intro_typename = 9;
    optional int32 schema_id = 10;
    repeated IntroDirectiveLocationsInput intro_directive_locations = 11;
    optional IntroDirectiveExpression where = 12;
}
message MutationIntroDirectiveListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string name = 3;
    optional IntroSchemaInput of_schema = 4;
    optional string description = 5;
    repeated io.graphoenix.core.grpc.IntroDirectiveLocation locations = 6;
    repeated IntroInputValueInput args = 7;
    optional bool is_repeatable = 8;
    optional string intro_typename = 9;
    optional int32 schema_id = 10;
    repeated IntroDirectiveLocationsInput intro_directive_locations = 11;
    repeated IntroDirectiveInput list = 12;
    optional IntroDirectiveExpression where = 13;
}
message MutationIntroTypeInterfacesRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string type_name = 4;
    optional IntroTypeInput from = 5;
    optional string interface_name = 6;
    optional IntroTypeInput to = 7;
    optional string intro_typename = 8;
    optional IntroTypeInterfacesExpression where = 9;
}
message MutationIntroTypeInterfacesListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string type_name = 4;
    optional IntroTypeInput from = 5;
    optional string interface_name = 6;
    optional IntroTypeInput to = 7;
    optional string intro_typename = 8;
    repeated IntroTypeInterfacesInput list = 9;
    optional IntroTypeInterfacesExpression where = 10;
}
message MutationIntroTypePossibleTypesRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string type_name = 4;
    optional IntroTypeInput from = 5;
    optional string possible_type_name = 6;
    optional IntroTypeInput to = 7;
    optional string intro_typename = 8;
    optional IntroTypePossibleTypesExpression where = 9;
}
message MutationIntroTypePossibleTypesListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string type_name = 4;
    optional IntroTypeInput from = 5;
    optional string possible_type_name = 6;
    optional IntroTypeInput to = 7;
    optional string intro_typename = 8;
    repeated IntroTypePossibleTypesInput list = 9;
    optional IntroTypePossibleTypesExpression where = 10;
}
message MutationIntroDirectiveLocationsRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string directive_name = 4;
    optional IntroDirectiveInput from = 5;
    optional io.graphoenix.core.grpc.IntroDirectiveLocation directive_location = 6;
    optional string intro_typename = 7;
    optional IntroDirectiveLocationsExpression where = 8;
}
message MutationIntroDirectiveLocationsListRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
    optional string id = 3;
    optional string directive_name = 4;
    optional IntroDirectiveInput from = 5;
    optional io.graphoenix.core.grpc.IntroDirectiveLocation directive_location = 6;
    optional string intro_typename = 7;
    repeated IntroDirectiveLocationsInput list = 8;
    optional IntroDirectiveLocationsExpression where = 9;
}
message MutationIsDeprecatedRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
}
message MutationVersionRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
}
message MutationRealmIdRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
}
message MutationCreateUserIdRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
}
message MutationCreateTimeRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
}
message MutationUpdateUserIdRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
}
message MutationUpdateTimeRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
}
message MutationCreateGroupIdRequest {
    optional string selection_set = 1;
    optional string arguments = 2;
}